# 08-harlequin

./: Cargo.toml  Makefile  README.md
src/: check.rs  error.rs  expr.rs  main.rs  ty.rs
tests/: all_tests.rs  check0-err.snek  check0.snek  check1-err.snek  check1.snek  exam.snek  fact.snek  lam-fac.snek  lam_not_fun.snek  list-fold-err.snek  list-fold.snek  list-map-err.snek  list-map.snek  list0-err.snek  list0.snek  list1-err.snek  list1.snek  list2-err.snek  ty0-err.snek  ty0.snek  ty1-err.snek  ty1.snek  ty2-err.snek  ty2.snek  ty3-err.snek  ty3.snek  unbound0.snek  unbound1.snek  unbound2.snek
tests/infra/: mod.rs
