[package]
name = "harlequin"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
ess = "0.4.2"
codespan-reporting = "0.11.1"
unindent = "0.2.3"
# sexp = "1.1.4"

[dev-dependencies]
prettydiff = "0.6.4"
